--- a/css/main.css
+++ b/css/main.css
@@ -95,3 +95,59 @@
 .text-none {
 	text-decoration: none;
 }
+
+/* CITY */
+
+#city {
+	background-image: url("https://wallpaperscraft.com/image/city_night_skyscraper_sky_834_1920x1200.jpg"); 
+	background-size: cover;
+	height: 250px;
+	padding: 15% 5%;
+	color: white;
+	-webkit-filter: grayscale(60%);
+	filter: grayscale(60%);
+}
+
+
+.button.transparente {
+	color: white;
+	background-color: rgba(255,255,255, 0.2);
+	box-shadow:0px 1px 1px white;
+}
+
+/* Package */
+
+#package {
+	background-color: rgb(244, 244, 244);
+	text-align: center;
+	padding: 5%;
+}
+
+.up {
+	background: #263238;
+	color: white;
+	text-align: center;
+	padding: 7% 5%;
+	margin: 0;
+	font-size: 20px;
+}
+
+.ft18 {
+	font-size: 20px;
+
+}
+
+.down {
+	background: #E0E0E0;
+	text-align: center;
+	padding: 15% 5%;
+	margin: 0;
+	height: auto;
+}
+
+.list {
+	text-align: center;
+	padding: 5%;
+	margin: 0;
+	border-bottom: 1px solid rgb(244, 244, 244);
+}
