--- a/css/main.css
+++ b/css/main.css
@@ -101,17 +101,31 @@
 #city {
 	background-image: url("https://wallpaperscraft.com/image/city_night_skyscraper_sky_834_1920x1200.jpg"); 
 	background-size: cover;
-	height: 250px;
-	padding: 15% 5%;
+	height: 400px;
 	color: white;
 	-webkit-filter: grayscale(60%);
 	filter: grayscale(60%);
 }
 
+.fondonegro {
+	background-color: rgba(0,0,0, 0.4);
+	z-index: -1;
+	width: 100%;
+	height: 400px;
+}
+
+.pdt12 {
+	padding-top: 12%;
+}
+
+.z2 {
+	z-index: 2;
+}
+
 
 .button.transparente {
 	color: white;
-	background-color: rgba(255,255,255, 0.2);
+	background-color: rgba(255,255,255, 0.1);
 	box-shadow:0px 1px 1px white;
 }
 
@@ -125,6 +139,15 @@
 
 .up {
 	background: #263238;
+	color: white;
+	text-align: center;
+	padding: 7% 5%;
+	margin: 0;
+	font-size: 20px;
+}
+
+.up2 {
+	background: #32C7C7;
 	color: white;
 	text-align: center;
 	padding: 7% 5%;
@@ -150,4 +173,131 @@
 	padding: 5%;
 	margin: 0;
 	border-bottom: 1px solid rgb(244, 244, 244);
+}
+
+/* Costumer */
+
+#customer {
+	text-align: center;
+	padding: 5%;
+}
+
+#customer img {
+	border-radius: 50%;
+	width: 130px;
+	height: 130px;
+	margin: 3%;
+}
+
+#customer p {
+	padding: 0 10%;
+}
+
+/* Contact Us */
+
+#Contact {
+	background-image: url("../img/background/contactus.jpg"); 
+	background-repeat: no-repeat;
+	background-position: right;
+	background-size: cover;
+	text-align: center;
+	color: white; 
+	padding: 5% 5% 10% 5%;
+}
+
+#Contact h2 {
+	font-weight: lighter;
+	margin: 0 0 3% 0;
+}
+
+#Contact h3 {
+	font-weight: lighter;
+	padding: 5%;
+	color: white;
+
+}
+
+.fondonegro1 {
+	background-color: rgba(0,0,0, 0.4);
+	z-index: -1;
+	width: 100%;
+	height: 100%;
+}
+
+form {
+	width: 450px;
+	margin: auto;
+	padding: 10px 20px;
+	box-sizing: border-box;
+	margin-top: 20px;
+}
+
+form h2 {
+	color: white;
+	margin: 15px;
+	font-size: 18px;
+	text-align: left;
+}
+
+input, textarea {
+	width: 100%;
+	margin-bottom: 20px;
+	padding: 7px;
+	font-size: 18px;
+	background-color: rgba(255,255,255, 0.1);
+}
+
+textarea {
+	min-height: 100px;
+	max-height: 200px;
+	max-width: 100%;
+}
+
+#boton {
+	background-color: #32C7C7;
+	color: white;
+	width: 100px;
+	height: 40px;
+	margin-left: -60%;
+}
+
+#boton:hover {
+	cursor: pointer;
+}
+
+@media (max-width: 480px) {
+	form {
+		width: 100%;
+	}
+}
+
+
+/* FOLLOW US */
+
+.follow {
+	text-align: center;
+	padding: 3%;
+}
+
+.follow h3 {
+	text-align: center;
+	padding: 0 0 2% 0;
+	font-weight: lighter;
+}
+
+.follow p {
+	padding: 0 30%;
+	font-size: 12px;
+}
+
+.inline {
+	display: inline-block;
+	margin: 35px 10px;
+	color: #455A64;
+}
+
+footer {
+	background-color: #263238;
+	text-align: center;
+	padding: 3%;
 }
